# visible-area-detection

./: Cargo.toml  README.md
src/: lib.rs
